aws-migration: cloudfront uses regional domain name

--- a/template.yaml
+++ b/template.yaml
@@ -84,7 +84,7 @@ Resources:
           ViewerProtocolPolicy: redirect-to-https
         DefaultRootObject: index.html
         Origins:
-          - DomainName: !GetAtt appbucket.DomainName
+          - DomainName: !GetAtt appbucket.RegionalDomainName
             Id: "appbucket"
             S3OriginConfig:
               OriginAccessIdentity: !Join
