--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
     "fuzzysort": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "lodash.clone": "^4.5.0",
