--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - run: npm ci
+    - run: npm i
     - run: npm run build
       env:
         STEMMA_BACKEND_URL: ${{ secrets.STEMMA_BACKEND_URL }}
