--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,18 +29,38 @@ jobs:
 #    - run: sam build
 #    - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
 
-    - uses: actions/setup-node@v3
+    - name: Install node
+      uses: actions/setup-node@v3
       with:
         node-version: 18
-    - working-directory: client
+
+    - name: Install client deps
+      working-directory: client
       run: npm i
-    - working-directory: client
+
+    - name: Build client
+      working-directory: client
       run: npm run build
       env:
         STEMMA_BACKEND_URL: ${{ secrets.STEMMA_BACKEND_URL }}
         GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
 
-#    - uses: jakejarvis/s3-sync-action@master
-#      with:
-#        args: --acl public-read --follow-symlinks --delete
+    - name: Upload to S3
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-central-1'
+        SOURCE_DIR: 'client/public'
 
+    - name: Invalidate CloudFront
+      uses: chetan/invalidate-cloudfront-action@v2
+      env:
+        DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
+        PATHS: "/*"
+        AWS_REGION: "eu-central-1"
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
