--- a/template.yaml
+++ b/template.yaml
@@ -3,23 +3,6 @@ Transform: AWS::Serverless-2016-10-31
 Description: SAM Template for stemma-app
 
 
-Globals:
-  Function:
-    Runtime: java11
-    Timeout: 20
-    MemorySize: 512
-    Environment:
-      Variables:
-        JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1
-        JDBC_URL: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_URL}}"
-        JDBC_USER: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_USER}}"
-        JDBC_PASSWORD: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_PASSWORD}}"
-        JDBC_CERT: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_CERT}}"
-        INVITE_SECRET: "{{resolve:secretsmanager:prod/invite:SecretString:INVITE_SECRET}}"
-    Layers:
-      - !Ref MyLayer
-
-
 Parameters:
   hostedZoneId:
     Description: ""
@@ -28,11 +11,11 @@ Parameters:
   cloudFrontAlias:
     Description: ""
     Type: String
-    Default: "stemma.link"
+    Default: "eg.stemma.link"
   apiAlias:
     Description: ""
     Type: String
-    Default: "api.stemma.link"
+    Default: "eg-api.stemma.link"
   certificateArnUsEast1:
     Description: ""
     Type: String
@@ -63,7 +46,7 @@ Resources:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Sub 'CloudFront OAI for ${cloudFrontAlias}'
   WebAppCDN:
-    DependsOn: appbucket
+    DependsOn: HtmlAssetsBucket
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
@@ -79,28 +62,21 @@ Resources:
         DefaultCacheBehavior:
           ForwardedValues:
             QueryString: 'true'
-          TargetOriginId: appbucket
+          TargetOriginId: HtmlAssetsBucket
           Compress: true
           CachePolicyId: "658327ea-f89d-4fab-a63d-7e88639e58f6" #managed Managed-CachingOptimized cache policy
           ViewerProtocolPolicy: redirect-to-https
         DefaultRootObject: index.html
         Origins:
-          - DomainName: !GetAtt appbucket.RegionalDomainName
-            Id: "appbucket"
+          - DomainName: !GetAtt HtmlAssetsBucket.RegionalDomainName
+            Id: "HtmlAssetsBucket"
             S3OriginConfig:
               OriginAccessIdentity: !Join
                 - /
                 - - origin-access-identity
                   - cloudfront
                   - !Ref CloudFrontOriginAccessIdentity
-  appbucket:
-    Type: 'AWS::S3::Bucket'
-    Properties:
-      BucketEncryption:
-        ServerSideEncryptionConfiguration:
-          - ServerSideEncryptionByDefault:
-              SSEAlgorithm: AES256
-  assetsbucket:
+  HtmlAssetsBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
       BucketEncryption:
@@ -108,7 +84,7 @@ Resources:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
 
-  AppBucketPolicy:
+  HtmlAssetsBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
       PolicyDocument:
@@ -123,9 +99,9 @@ Resources:
             Resource: !Join
               - ''
               - - 'arn:aws:s3:::'
-                - !Ref appbucket
+                - !Ref HtmlAssetsBucket
                 - /*
-      Bucket: !Ref appbucket
+      Bucket: !Ref HtmlAssetsBucket
   AccessLogs:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -172,33 +148,26 @@ Resources:
           "responseLength":"$context.responseLength" 
           }'
       StageName: dev
-  MyLayer:
-    Type: AWS::Serverless::LayerVersion
-    Properties:
-      ContentUri: .
-      CompatibleRuntimes:
-        - java11
-      RetentionPolicy: Delete
-    Metadata:
-      BuildMethod: makefile
-  StemmaFunction:
+  HelloWorldFunction:
     Type: AWS::Serverless::Function
-    Metadata:
-      BuildMethod: makefile
     Properties:
-      Handler: io.github.salamahin.stemma.apis.serverless.aws.StemmaLambda::apply
+      CodeUri: hello_world/
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Architectures:
+        - x86_64
       Events:
-        ApiEvent:
+        HelloWorld:
           Type: HttpApi
           Properties:
             ApiId: !Ref MyApi
-            Path: /stemma
-            Method: post
-      Policies:
-        - S3FullAccessPolicy:
-            BucketName: stemma-app-backend-assets
+            Path: /hello
+            Method: get
 
 Outputs:
-  ApiEndpoint:
-    Description: "HTTP API endpoint URL"
-    Value: !Sub "https://${MyApi}.execute-api.${AWS::Region}.amazonaws.com/dev"
+  HtmlAssetsBucketRegionalName:
+    Description: "Name of the bucket where html assets are stored"
+    Value: !Ref HtmlAssetsBucket
+  CloudFormationId:
+    Description: "Cloudformation id"
+    Value: !GetAtt WebAppCDN.Id
