application conf adjusted

--- a/api_impl_aws_lambda/src/main/resources/application.conf
+++ b/api_impl_aws_lambda/src/main/resources/application.conf
@@ -1,5 +1,10 @@
-dbConfig {
-  jdbcUrl: ${JDBC_URL}
-  username: ${JDBC_USER}
-  password: ${JDBC_PASSWORD}
+dbConfig = {
+ connectionPool = "HikariCP"
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+  properties = {
+    jdbcUrl = ${JDBC_URL}
+    username = ${JDBC_USER}
+    password = ${JDBC_PASSWORD}
+  }
+  numThreads = 10
 }
