--- a/api_impl_aws_lambda/src/main/resources/application.conf
+++ b/api_impl_aws_lambda/src/main/resources/application.conf
@@ -2,4 +2,7 @@ dbConfig {
   jdbcUrl: ${JDBC_URL}
   username: ${JDBC_USER}
   password: ${JDBC_PASSWORD}
+  connectionPool: HikariCP
+  dataSourceClass: org.postgresql.ds.PGSimpleDataSource
+  numThreads: 5
 }
