--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@imask/svelte": "^6.4.3",
     "fuzzysort": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "lodash.clone": "^4.5.0",
