--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,15 @@ jobs:
       uses: sbt/setup-sbt@v1
     - name: Run tests
       run: sbt test
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: client/package-lock.json
+    - name: Install client deps
+      run: npm ci
+      working-directory: client
+    - name: Run client tests
+      run: npm test
+      working-directory: client
