--- a/client/package.json
+++ b/client/package.json
@@ -14,30 +14,33 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
-    "@testing-library/svelte": "^3.1.3",
+    "@testing-library/svelte": "^5.2.10",
+    "@types/node": "^20.11.30",
     "@tsconfig/svelte": "^2.0.0",
-    "@types/jest": "^28.1.4",
+    "@swc/core": "^1.3.107",
+    "@swc/jest": "^0.2.29",
+    "@typescript-eslint/types": "^8.12.2",
+    "@types/jest": "^29.5.12",
     "@types/lodash.isequal": "^4.5.6",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "d3": "^7.3.0",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "less": "^4.1.3",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-svelte": "^7.2.2",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.0.0",
+    "svelte": "^5.49.1",
+    "svelte-check": "^4.3.6",
+    "svelte-jester": "^5.0.0",
+    "svelte-preprocess": "^6.0.3",
     "svelte-preprocess-less": "^0.4.0",
-    "ts-jest": "^28.0.5",
     "tslib": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@imask/svelte": "^6.4.3",
