--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2019",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "verbatimModuleSyntax": true
     }
 }
